--- a/TargetBrowser/TargetBrowser.csproj
+++ b/TargetBrowser/TargetBrowser.csproj
@@ -50,6 +50,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdsHelper.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
